--- a/client/css/style.css
+++ b/client/css/style.css
@@ -7,7 +7,19 @@ body { margin-top: 30px; }
 .repoItem {
 	background: #f9f9f9;
 	border: #f4f4f4 1px solid;
-	padding: 20px 10px;
+	padding: 10px 10px;
 	border-radius: 10px;
 	margin-bottom: 10px;
+}
+
+.form-control {
+	width: 450px !important;
+	margin-right: 10px;
+}
+
+form {
+	text-align: center;
+	margin-bottom: 35px;
+	background: #f4f4f4;
+	padding: 20px 10px;
 }
